Fix the bug for mobile display

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ img .input-image {
             <hr>
             <br>
 
-            <div class="d-flex">
+            <div class="row">
               <div ><img src="interpolate/example2/albedo.gif" width="215"></div>
               <div class="ml-auto"><img src="interpolate/example2/relit.gif" width="215"></div>
               <div class="ml-auto"><img src="interpolate/example2/normal.gif" width="215"></div>
@@ -406,7 +406,7 @@ img .input-image {
               <div class="ml-auto"><img src="interpolate/example2/specular.gif" width="215"></div>
             </div>
 
-              <div class="d-flex">
+              <div class="row">
               <div class="col-md-2 text-center">Albedo</div>
               <div class="col-md-3 text-center">Relit Image</div>
               <div class="col-md-2 text-center">Normals</div>
@@ -490,7 +490,7 @@ img .input-image {
             <br>
             <br>  
   
-              <div class="d-flex">
+              <div class="row">
               <div ><img src="interpolate/example1/albedo.gif" width="215"></div>
               <div class="ml-auto"><img src="interpolate/example1/relit.gif" width="215"></div>
               <div class="ml-auto"><img src="interpolate/example1/normal.gif" width="215"></div>
@@ -498,7 +498,7 @@ img .input-image {
               <div class="ml-auto"><img src="interpolate/example1/specular.gif" width="215"></div>
             </div>
             <br>  
-            <div class="d-flex">
+            <div class="row">
               <div ><img src="interpolate/example3/albedo.gif" width="215"></div>
               <div class="ml-auto"><img src="interpolate/example3/relit.gif" width="215"></div>
               <div class="ml-auto"><img src="interpolate/example3/normal.gif" width="215"></div>
@@ -506,7 +506,7 @@ img .input-image {
               <div class="ml-auto"><img src="interpolate/example3/specular.gif" width="215"></div>
             </div>
             <br>  
-            <div class="d-flex">
+            <div class="row">
               <div ><img src="interpolate/example5/albedo.gif" width="215"></div>
               <div class="ml-auto"><img src="interpolate/example5/relit.gif" width="215"></div>
               <div class="ml-auto"><img src="interpolate/example5/normal.gif" width="215"></div>
@@ -514,14 +514,14 @@ img .input-image {
               <div class="ml-auto"><img src="interpolate/example5/specular.gif" width="215"></div>
             </div>
             <br>  
-            <div class="d-flex">
+            <div class="row">
               <div ><img src="interpolate/example4/albedo.gif" width="215"></div>
               <div class="ml-auto"><img src="interpolate/example4/relit.gif" width="215"></div>
               <div class="ml-auto"><img src="interpolate/example4/normal.gif" width="215"></div>
               <div class="ml-auto"><img src="interpolate/example4/diffuse.gif" width="215"></div>
               <div class="ml-auto"><img src="interpolate/example4/specular.gif" width="215"></div>
             </div>
-              <div class="d-flex">
+              <div class="row">
               <div class="col-md-2 text-center">Albedo</div>
               <div class="col-md-3 text-center">Relit Image</div>
               <div class="col-md-2 text-center">Normals</div>
